<?xml version="1.0"?>
<package>
  <name>behavior_tree</name>
  <version>0.0.0</version>
  <description>The behavior_tree package</description>

  <maintainer email="dave@todo.todo">dave</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>behaviortree_cpp_v3</run_depend>
</package>